fixed bug causing double fault when SS not zeroed
According to Intel Manual SS should be ignored? in 64 bit mode. However
iret still crashes after we loaded our own gdt.

SS: Stack Segment
ire: interrupt return
get: Global Descriptor Table
        used to specify special stack for double faults
        in case double fault was caused by stack overflow.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 
 
 [package]
-name = "WasabiOs"
+name = "wasabi_os"
 version = "0.1.0"
 
 [build-dependencies]
@@ -14,5 +14,10 @@ ovmf-prebuilt = "0.1.0-alpha.1"
 
 [workspace]
 members = [
-    "wasabi-kernel"
+    "wasabi-kernel",
+    "shared-derive",
+    "shared",
+    "logger",
+    "staticvec",
+    "colored"
 ]
