--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -6,7 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+shared = { path = "../shared" }
+shared-derive = { path = "../shared-derive" }
+logger = { path = "../logger" }
+
 bootloader_api = "0.11.3"
+lazy_static = { version = "1.4.0", features=["spin_no_std"] }
+thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
+uart_16550 = "0.2.18"
+x86_64 = "0.14.10"
+log = "0.4.17"
 
 [profile.dev]
 panic = "abort"
