--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-no-color = [ "colored/no-color" ]
+no-color = ["colored/no-color"]
 
 [dependencies]
 shared = { path = "../shared" }
@@ -21,6 +21,7 @@ x86_64 = "0.14.10"
 log = "0.4.17"
 bit_field = "0.10.2"
 volatile = "0.4.6"
+linked_list_allocator = { version = "0.10.5", default-features = false }
 
 [profile.dev]
 panic = "abort"
