--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,11 @@ members = [
     "staticvec",
     "colored"
 ]
+
+[workspace.dependencies]
+lazy_static = { version = "1.4.0", features=["spin_no_std"] }
+thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
+x86_64 = "0.14.10"
+log = "0.4.17"
+bit_field = "0.10.2"
+paste = "1.0.12"
