--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+x86_64.workspace = true
+log.workspace = true
