--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -14,14 +14,15 @@ staticvec = { path = "../staticvec" }
 colored = { path = "../colored" }
 
 bootloader_api = { version = "0.11.3", path = "../../bootloader/api" }
-lazy_static = { version = "1.4.0", features=["spin_no_std"] }
-thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
+lazy_static.workspace = true
+thiserror.workspace = true
 uart_16550 = "0.2.18"
-x86_64 = "0.14.10"
-log = "0.4.17"
-bit_field = "0.10.2"
+x86_64.workspace = true
+log.workspace = true
+bit_field.workspace = true
 volatile = "0.4.6"
 linked_list_allocator = { version = "0.10.5", default-features = false }
+paste.workspace = true
 
 [profile.dev]
 panic = "abort"
