--- a/colored/Cargo.toml
+++ b/colored/Cargo.toml
@@ -19,5 +19,5 @@ lazy_static.workspace = true
 staticvec = { path = "../staticvec" }
 
 [dev_dependencies]
-ansi_term = "0.12"
+ ansi_term = "0.12" # seems to be not needed, with my modifications and it is no longer maintained
 rspec = "=1.0.0-beta.3"
