--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ bios-boot = ["bootloader/bios"]
 
 [build-dependencies]
 bootloader = { version = "0.11", path = "../bootloader", default-features = false, features = ["uefi"]}
-wasabi-kernel = { path = "wasabi-kernel", artifact = "bin", target = "x86_64-unknown-none" }
+
+[build-dependencies.wasabi-kernel]
+path = "wasabi-kernel"
+artifact = "bin"
+target = "x86_64-unknown-none"
+features = ["no-unicode-log"]
 
 [dependencies]
 # used for UEFI booting in QEMU
