Interrupts: extract fn builder macros into library
I want the fn builder macros to be accessible everywhere, but I really
don't want them to pollute the kernel namespace, so I extracted them
into a new library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ members = [
     "shared",
     "logger",
     "staticvec",
-    "colored"
+    "colored",
+    "interrupt-fn-builder",
 ]
 
 [workspace.dependencies]
