--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -13,6 +13,7 @@ shared-derive = { path = "../shared-derive" }
 logger = { path = "../logger" }
 staticvec = { path = "../staticvec" }
 colored = { path = "../colored" }
+interrupt-fn-builder =  { path = "../interrupt-fn-builder" }
 
 bootloader_api = { version = "0.11.3", path = "../../bootloader/api" }
 lazy_static.workspace = true
