--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,9 @@ x86_64 = "0.14.10"
 log = "0.4.17"
 bit_field = "0.10.2"
 paste = "1.0.12"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
