--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,9 @@
 # enable the unstable artifact-dependencies feature, see
 # https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#artifact-dependencies
 bindeps = true
+
+[target.x86_64-unknown-none]
+rustflags = [
+    "-C", "link-arg=-z",
+    "-C", "link-arg=nostart-stop-gc"
+]
