--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "wasabi_os"
 version = "0.1.0"
+edition = "2021"
 
 [features]
 no-color = [ "wasabi-kernel/no-color" ]
@@ -34,8 +35,13 @@ members = [
     "staticvec",
     "colored",
     "interrupt-fn-builder",
-    "testing"
+    "testing",
+    "testing/derive",
 ]
+
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
 
 [workspace.dependencies]
 lazy_static = { version = "1.4.0", features=["spin_no_std"] }
@@ -45,6 +51,10 @@ log = "0.4.17"
 bit_field = "0.10.2"
 paste = "1.0.12"
 linkme = "0.3.10"
+proc-macro2 = "1.0.58"
+quote = "1.0.27"
+syn = { version = "2.0.16", features = ["full"] }
+itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
 
 
 [[test]]
