--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+testing-derive = { path = "derive" }
 x86_64.workspace = true
 log.workspace = true
 linkme.workspace = true
