--- a/testing/derive/Cargo.toml
+++ b/testing/derive/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "shared-derive"
+name = "testing-derive"
 version.workspace = true
 edition.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-shared = { path = "../shared" }
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
