--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 [features]
 no-color = ["colored/no-color"]
 no-unicode-log = []
-test = ["dep:testing"]
+test = ["dep:testing", "shared/test"]
 
 [dependencies]
 shared = { path = "../shared" }
@@ -27,4 +27,4 @@ bit_field.workspace = true
 volatile = "0.4.6"
 linked_list_allocator = { version = "0.10.5", default-features = false }
 paste.workspace = true
-
+linkme.workspace = true
