--- a/wasabi-test/Cargo.toml
+++ b/wasabi-test/Cargo.toml
@@ -16,6 +16,7 @@ log.workspace = true
 x86_64.workspace = true
 linkme.workspace = true
 itertools.workspace = true
+uart_16550.workspace = true
 
 [dependencies.wasabi-kernel]
 path = "../wasabi-kernel"
