New Test runner
Implemented new test runner, that communicates via tcp/serial between
the os-runner and qemu kernel, to facilitate isolating tests in their own
qemu instance, and allow recovering from panics.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ ovmf-prebuilt = "0.1.0-alpha.1"
 bootloader = { version = "0.11", path = "../bootloader", default-features = false, features = ["uefi"]}
 cargo_toml = "0.15.3"
 tokio = { version = "1.32.0", features = ["full"] }
+simple_logger = { version = "4.2.0", default-features = false, features = ["colors"]}
+log = "0.4.20"
 
 [workspace]
 members = [
