Add noto-sans-mono font dependency
Unlike other fonts in the future this dependency directly includes the
binary bitmap data for the font in the final kernel binary.

For future fonts we will rely on the (not yet existing) file sytem.

However including 1 font directly is also useful for pancis, where we
can't rely on the fs working

--- a/wasabi-test/Cargo.toml
+++ b/wasabi-test/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wasabi-test"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [features]
 no-color = ["wasabi-kernel/no-color"]
@@ -11,7 +11,7 @@ shared = { path = "../shared" }
 testing = { path = "../testing" }
 staticvec = { path = "../staticvec" }
 
-bootloader_api = { version = "0.11.3", path = "../../bootloader/api" }
+bootloader_api.workspace = true
 log.workspace = true
 x86_64.workspace = true
 linkme.workspace = true
