--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -17,7 +17,7 @@ colored = { path = "../colored" }
 interrupt-fn-builder =  { path = "../interrupt-fn-builder" }
 testing = { path = "../testing", optional = true }
 
-bootloader_api = { version = "0.11.3", path = "../../bootloader/api" }
+bootloader_api.workspace = true
 lazy_static.workspace = true
 thiserror.workspace = true
 uart_16550.workspace = true
@@ -28,3 +28,4 @@ volatile = "0.4.6"
 linked_list_allocator = { version = "0.10.5", default-features = false }
 paste.workspace = true
 linkme.workspace = true
+noto-sans-mono-bitmap.workspace = true
