--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -32,3 +32,4 @@ linked_list_allocator = { version = "0.10.5", default-features = false }
 paste.workspace = true
 linkme.workspace = true
 noto-sans-mono-bitmap.workspace = true
+derive_builder.workspace = true
