--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
 channel = "nightly"
-components = ["rustfmt", "clippy", "llvm-tools-preview"]
+components = ["rustfmt", "rust-src", "clippy", "llvm-tools-preview"]
 targets = ["x86_64-unknown-none"]
