--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "nightly"
+channel = "nightly-2024-03-23"
 components = ["rustfmt", "rust-src", "clippy", "llvm-tools-preview"]
 targets = ["x86_64-unknown-none"]
