--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -14,7 +14,7 @@ default = ["mem-backed-guard-page"]
 [dependencies]
 shared = { path = "../shared" }
 shared-derive = { path = "../shared-derive" }
-logger = { path = "../logger" }
+logger = { path = "../logger", features = ["alloc"] }
 staticvec = { path = "../staticvec" }
 colored = { path = "../colored" }
 interrupt-fn-builder =  { path = "../interrupt-fn-builder" }
