Build: Compile asm and nasm files into binaries
This is used to load compiled asm into allocated memory.
We need this if we want to load code into a location that is runtime
dependent and will use this for the ap trampoline.

--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -20,16 +20,20 @@ colored = { path = "../colored" }
 interrupt-fn-builder =  { path = "../interrupt-fn-builder" }
 testing = { path = "../testing", optional = true }
 
+bit_field.workspace = true
 bootloader_api.workspace = true
+derive_builder.workspace = true
 lazy_static.workspace = true
+linked_list_allocator = { version = "0.10.5", default-features = false }
+linkme.workspace = true
+log.workspace = true
+noto-sans-mono-bitmap.workspace = true
+paste.workspace = true
+static_assertions.workspace = true
 thiserror.workspace = true
 uart_16550.workspace = true
-x86_64.workspace = true
-log.workspace = true
-bit_field.workspace = true
 volatile = "0.4.6"
-linked_list_allocator = { version = "0.10.5", default-features = false }
-paste.workspace = true
-linkme.workspace = true
-noto-sans-mono-bitmap.workspace = true
-derive_builder.workspace = true
+x86_64.workspace = true
+
+[build-dependencies]
+walkdir.workspace = true
