--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -23,6 +23,7 @@ testing = { path = "../testing", optional = true }
 bit_field.workspace = true
 bootloader_api.workspace = true
 derive_builder.workspace = true
+iced-x86.workspace = true
 lazy_static.workspace = true
 linked_list_allocator = { version = "0.10.5", default-features = false }
 linkme.workspace = true
