Tests for test macros
Only enabled with the test-tests feature

--- a/wasabi-test/Cargo.toml
+++ b/wasabi-test/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [features]
 no-color = ["wasabi-kernel/no-color"]
+test-tests = []
 
 [dependencies]
 shared = { path = "../shared" }
