--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,8 +58,9 @@ x86_64 = { version = "0.15", path = "/home/burkhard/programming/projects/x86_64"
 noto-sans-mono-bitmap = { version = "0.2.0", features = ["unicode-latin-1-supplement", "unicode-specials"]}
 
 # TODO use upstream once new version is released
-bootloader = { git = "https://github.com/Wasabi375/bootloader", branch = "page_table_bug", version = "0.11", default-features = false, features = ["uefi"] }
+bootloader = { git = "https://github.com/Wasabi375/bootloader", branch = "protect_lower_1mb", version = "0.11", default-features = false, features = ["uefi"] }
 # bootloader = { version = "0.11.8", default-features = false, features = ["uefi"] }
+# bootloader = { path = "/home/burkhard/programming/forks/bootloader", default-features = false, features = ["uefi"]}
 bootloader_api = { version = "0.11" }
 
 [profile.dev]
