--- a/wasabi-test/Cargo.toml
+++ b/wasabi-test/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [features]
 no-color = ["wasabi-kernel/no-color"]
 test-tests = []
+default = ["test-tests"]
 
 [dependencies]
 shared = { path = "../shared" }
