ACPI: experiment with parsing acpi
also added hexdump utils
and probably a lot of other small stuff. Can't fully remember

--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -34,6 +34,7 @@ thiserror.workspace = true
 uart_16550.workspace = true
 volatile = "0.4.6"
 x86_64.workspace = true
+hashbrown.workspace = true
 
 [build-dependencies]
 walkdir.workspace = true
