NVME: send first admin command

--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -35,6 +35,7 @@ uart_16550.workspace = true
 volatile = "0.4.6"
 x86_64.workspace = true
 hashbrown.workspace = true
+derive-where.workspace = true
 
 [build-dependencies]
 walkdir.workspace = true
