--- a/staticvec/Cargo.toml
+++ b/staticvec/Cargo.toml
@@ -3,6 +3,11 @@ name = "staticvec"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+alloc = []
+serde = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
