--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,12 +33,13 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
-# TODO remove lazy_static as a dependency, in order to get rid of the external spin-lock
 bit_field = "0.10.2"
+bitflags = "2.6.0"
 #  TODO use upstream once new version is released
 derive_builder = { version = "0.20.0", git = "https://github.com/Wasabi375/rust-derive-builder", branch = "owned_custom_default", default-features = false}
 iced-x86 = { version = "1.21", default-features = false, features = [ "no_std", "nasm", "decoder" ] }
 itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
+# TODO remove lazy_static as a dependency, in order to get rid of the external spin-lock
 lazy_static = { version = "1.4.0", features=["spin_no_std"] }
 linkme = "0.3.10"
 log = "0.4.20"
