--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,18 @@ edition.workspace = true
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.3.4", features = ["derive"] }
-# used for UEFI booting in QEMU
-ovmf-prebuilt = "0.1.0-alpha.1"
 bootloader.workspace = true
 cargo_toml = "0.15.3"
 tokio = { version = "1.32.0", features = ["full"] }
 simple_logger = { version = "4.2.0", default-features = false, features = ["colors"]}
 log.workspace = true
+ureq = "2.10.1"
+fs-err = "2.11.0"
+sha2 = "0.10.8"
+tar = "0.4.41"
+lzma-rs = "0.3.0"
+tempfile = "3.12.0"
+
 
 [workspace]
 members = [
