--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-alloc = []
 test = []
-default= ["alloc"]
+default= []
 no-unicode-log = []
 
 [dependencies]
