--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -4,19 +4,19 @@ version.workspace = true
 edition.workspace = true
 
 [features]
-no-color = ["colored/no-color"]
+default = []
+
+no-color = []   # TODO this is broken I think
 no-unicode-log = ["shared/no-unicode-log"]
 test = ["dep:testing", "shared/test"]
 mem-backed-guard-page = []  # TODO broken I think, add to test
 
-default = []
 
 [dependencies]
 shared = { path = "../shared" }
 shared-derive = { path = "../shared-derive" }
-logger = { path = "../logger", features = ["alloc"] }
+logger = { path = "../logger" }
 staticvec = { path = "../staticvec" }
-colored = { path = "../colored" }
 interrupt-fn-builder =  { path = "../interrupt-fn-builder" }
 testing = { path = "../testing", optional = true }
 
