--- a/wasabi-test/Cargo.toml
+++ b/wasabi-test/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 no-color = ["wasabi-kernel/no-color"]
 test-tests = []
 mem-backed-guard-page = ["wasabi-kernel/mem-backed-guard-page"]
+mem-stats = ["wasabi-kernel/mem-stats"]
 
 default = []
 
