--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -4,7 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [features]
-default = ["mem-stats"]
+default = []
 
 no-color = ["logger/no-color"]  
 no-unicode-log = ["shared/no-unicode-log"]
