--- a/staticvec/Cargo.toml
+++ b/staticvec/Cargo.toml
@@ -10,4 +10,5 @@ serde = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+shared = { path = "../shared" }
 
