Shared: extract counts_required_for! from pages_required_for!
This is a data type agnostic version of the macro that can be reused in
other places, e.g. logical blocks in file system or even how many copies
of this fixed size array do I need to store n elements.

--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -8,8 +8,8 @@ default= []
 no-unicode-log = []
 
 [dependencies]
-x86_64.workspace = true
 log.workspace = true
 paste.workspace = true
+static_assertions.workspace = true
 thiserror.workspace = true
-
+x86_64.workspace = true
