FS: create a file system on a block device

--- a/wasabi-fs/Cargo.toml
+++ b/wasabi-fs/Cargo.toml
@@ -4,9 +4,12 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+shared = { path = "../shared" }
 staticvec = { path = "../staticvec" }
 
 bit_field.workspace = true
 bitflags.workspace = true
+log.workspace = true
 static_assertions.workspace = true
 thiserror.workspace = true
+uuid.workspace = true
