--- a/wasabi-fs/fuse/Cargo.toml
+++ b/wasabi-fs/fuse/Cargo.toml
@@ -5,10 +5,13 @@ edition.workspace = true
 
 [dependencies]
 wfs = { path  = ".." }
+shared = { path = "../../shared" }
 
 fuser = "0.15.0"
 libc = "0.2.161"
 
 clap = { version = "4.5", features = ["derive"] }
-simple_logger = { version = "4.2.0", default-features = false, features = ["colors"]}
+simple_logger = { version = "4.2.0", default-features = false, features = ["colors"] }
+uuid = { workspace = true, features = ["v4"] }
 log.workspace = true
+thiserror.workspace = true
