Fs: Check for existing + change LBA to be NonMax instead of NonZero
Create Fs now checks that the device does not have an existing fs in
place.
LBA now uses u64::MAX as the illegal value, instead of zero.
This way we still get the Option optimization, but can access the 0
block.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ itertools = { version = "0.14.0", default-features = false, features = ["use_all
 libm = "0.2.11"
 linkme = "0.3.31"
 log = "0.4.22"
+nonmax = { version = "0.5.5", default-features = false }
 noto-sans-mono-bitmap = { version = "0.3.0", features = ["unicode-latin-1-supplement", "unicode-specials"]}
 paste = "1.0.12"
 proc-macro2 = "1.0.92"
