--- a/wasabi-fs/fuse/Cargo.toml
+++ b/wasabi-fs/fuse/Cargo.toml
@@ -15,3 +15,4 @@ simple_logger = { version = "4.2.0", default-features = false, features = ["colo
 uuid = { workspace = true, features = ["v4"] }
 log.workspace = true
 thiserror.workspace = true
+anyhow.workspace = true
