--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [features]
 default = []
 
+fixed-kernel-vaddr = []
 no-color = ["logger/no-color"]  
 no-unicode-log = ["shared/no-unicode-log"]
 mem-stats = [ "dep:histogram" ]
