Mem: Add freeze-heap feature
The freeze heap feature allows freezing the currently used heap and
switch to a new secondary heap. This is added as a debugging tool to
ensure that new allocations don't accidentally interfere with existing
allocations.

--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -12,6 +12,7 @@ no-unicode-log = ["shared/no-unicode-log"]
 mem-stats = [ "dep:histogram" ]
 test = ["dep:testing"]
 mem-backed-guard-page = []  
+freeze-heap = ["mem-stats"]
 
 
 [dependencies]
