--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "staticvec",
     "testing",
     "testing/derive",
+    "testing/test-tests",
     "wasabi-kernel",
     "wasabi-test",
 ]
@@ -39,6 +40,8 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
+shared = { path = "shared" }
+
 anyhow =  "1.0.94"
 bit_field = "0.10.2"
 bitflags = "2.6.0"
