Testing: Add multitest procmacro for modules
This will automatically add a #[test] for each #[kernel_test].
Right now any multiprocessor test is ignored in the rust-tests.

--- a/testing/test-tests/Cargo.toml
+++ b/testing/test-tests/Cargo.toml
@@ -3,6 +3,10 @@ name = "testing-tests"
 version.workspace = true
 edition.workspace = true
 
+[features]
+default = ["test"]
+test = []
+
 [dependencies]
 shared.workspace = true
 testing = {path = ".."}
