FS: FileId is now NonZero and not NonMax
Turns out that linux uses Inode 1 for the root of the fuse fs, therefor
I guess I will also use 1 for the root of my fs, not that it really
matters.
This also means I can now use 0 for `None` which also simplifies
debugging as `NonMax` is using bit manipulation which are hard to follow
in gdb.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ walkdir = "2.5"
 
 # TODO use upstream version once merged and released
 # TODO create PR for nonmax
-simple_endian = { version = "0.3.2", git = "https://github.com/Wasabi375/simple-endian-rs.git", branch = "generic_ops"}
+simple_endian = { version = "0.3.2", git = "https://github.com/Wasabi375/simple-endian-rs.git", branch = "non_zero"}
 
 # TODO use upstream version once I created a PR and it was merged, waiting on simple_endian
 nonmax = { version = "0.5.5", git = "https://github.com/Wasabi375/nonmax.git", branch = "simple_endian", default-features = false , features = ["simple_endian"] }
